Reduce h1 to 99vw to prevent horizontal scroll bar

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h1 {
     margin-bottom: 0.3em;
     padding-top: 1vh;
     font-size: 10vh;
-    width: 100vw;
+    width: 99vw;
     position: relative;
     left: calc(-50vw + 50%);
     text-shadow: -1px -1px 0 var(--black), 1px -1px 0 var(--black), -1px 1px 0 var(--black), 1px 1px 0 var(--black);
